# Projet-Hub

./: .gitignore
Cabot/: settings.gradle.kts  tree.txt
Cabot/app/: build.gradle.kts
Cabot/app/src/main/: AndroidManifest.xml
Cabot/app/src/main/cpp/: CMakeLists.txt
Cabot/app/src/main/res/anim/: slide_in_left.xml  slide_out_right.xml
Cabot/app/src/main/res/drawable/: bg_board_card.xml  bg_board_card_selected.xml  bg_button_primary.xml  bg_home.xml  bg_logo_circle.xml  bg_table.xml  ic_cabot_logo.xml  ic_play.xml  (+2 more)
Cabot/gradle/: libs.versions.toml
Cabot/gradle/wrapper/: gradle-wrapper.properties
Rust-Snake_Clash/: Cargo.toml  WORKFLOW_PROJET.md  index.html
Rust-Snake_Clash/src/: constants.rs  main.rs
Rust-Snake_Clash/src/client/: lobby_ui.rs  master_api.rs  menu.rs  mod.rs  net.rs  predict.rs  runtime.rs  state.rs
Rust-Snake_Clash/src/config/: mod.rs
Rust-Snake_Clash/src/entities/: fruit.rs  mod.rs  snake.rs
Rust-Snake_Clash/src/game/: collision.rs  food.rs  loop.rs  math.rs  mod.rs  sim.rs  snake.rs  snake_sim.rs  spawn.rs  types.rs  world.rs
Rust-Snake_Clash/src/master/: auth.rs  gc.rs  mod.rs  routes.rs  state.rs
Rust-Snake_Clash/src/net/: codec.rs  dispatcher.rs  messages.rs  mod.rs  session.rs  ws.rs
Rust-Snake_Clash/src/state/: lobby.rs  room.rs
Rust-Snake_Clash/src/util/: time.rs
Rust-Snake_Clash/src/world/: mod.rs  pellets.rs  tokens.rs
Rust-Snake_Clash/web/: README.md  build_wasm.sh  build_wasm_demo.sh  build_wasm_demo_play.sh  index.html  serve.sh  snake-rust_demo100.wasm  snake-rust_demo_play100.wasm  snake-rust_playable.wasm
(+18 files in other folders)
