[package]
name = "snake-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
macroquad = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["rt-multi-thread", "macros", "time", "sync", "net"] }
tokio-tungstenite = "0.23"
futures-util = "0.3"
bincode = "1.3"
axum = "0.7"
ureq = { version = "2.10", features = ["json"] }

[features]
# Client demo: 100 bots, no player control (spectator camera with joystick + zoom buttons).
demo100 = []

# Client demo (playable): same as normal play, but with 100 bots + reduced clutter.
demo_play100 = []
